SDWLS,3RD_ORDER FRAMEWORK IMPLEMENTED, SDWLS not implemented yet

--- a/externals/Makefile
+++ b/externals/Makefile
@@ -223,7 +223,7 @@ mandir = ${datarootdir}/man
 mkdir_p = $(MKDIR_P)
 oldincludedir = /usr/include
 pdfdir = ${docdir}
-prefix = /home/vinoth/SU2/SU2-3.2.3_bin
+prefix = /home/vinoth/SU2/SU2_bin_3.2.3
 program_transform_name = s,x,x,
 psdir = ${docdir}
 sbindir = ${exec_prefix}/sbin
